--- a/src/scss/blocks/_tabs.scss
+++ b/src/scss/blocks/_tabs.scss
@@ -1,6 +1,11 @@
 @use '../variables' as *;
 @use '../mixins' as *;
 
+.tabs {
+  flex: 1 1 auto;
+  min-width: 0;
+}
+
 .tabs__list {
   display: flex;
   flex-wrap: wrap;
